--- a/knight-publicbits/index.html
+++ b/knight-publicbits/index.html
@@ -159,7 +159,7 @@ window.onload = function() {
     </notes>
   </div>
   <div>
-    <img src="slides-01.png" />
+    <img src="slides-02.png" />
     <notes>
       once the data is all downloaded, sue can finally compile the data and make all of the analyses, charts, and graphs she needs
     </notes>
@@ -176,11 +176,19 @@ window.onload = function() {
   </div>
   <div><img src="slides-08.png" />
     <notes>
-      if she doesn't, bad things could happen (science, journalism)
+      the data is faulty
     </notes>
   </div>
-  <div><img src="slides-07.png" /></div>
-  <div><img src="slides-09.png" /></div>
+  <div><img src="slides-07.png" />
+    <notes>
+      the analyses are faulty
+    </notes>
+  </div>
+  <div><img src="slides-09.png" />
+    <notes>
+      the whole entie project could be inaccurate!
+    </notes>
+  </div>
   <div><img src="slides-10.png" />
     <notes>
       …. what if the data becomes unavailable? no one else can replicate it. (internet archive)
@@ -204,7 +212,7 @@ window.onload = function() {
     </notes>
   </div>
   <div>
-    share and discover
+    discovery
     <notes>
       we realized the missing piece is an easy way to share and discover datasets
     </notes>
