--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<a href="/presos/wikis">Wikis</a>
+<ul>
+<li>
+  <a href="/presos/wikis">Wikis</a>
+</li>
+<li>
+<a href="/presos/dat-demo-talk">Dat Demo talk</a>
+</li>
+<li>
 <a href="/presos/node-dat-graph">Node Dat Graph</a>
+</li>
+</ul>
